--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,6 +4,115 @@ html, body{
   background-color: lightgrey;
 }
 
-.main-container{
+hr{
+  margin-bottom: 2rem;
+}
+
+button:focus{
+  outline: 0;
+}
+
+.choices{
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 8px;
+  border: 2px solid black;
+  width: 80%;
+  background-color: #24272E;
+  color: white;
+  padding: 2rem;
+}
+
+.header{
+  text-align: center;
+  font-size: 32px;
+  font-family: 'Literata', serif;
+  padding: 1rem;
+}
+
+.character-types{
+  padding: 1rem;
+  font-size: 24px;
+  text-decoration: underline;
+  font-family: 'Literata', serif;
+}
+
+.length-row{
+  padding: 1rem;
+  display: inline-block;
+}
+
+.special-char-row{
+  padding: 1rem;
+  display: inline-block;
+}
+
+.numerical-char-row{
+  padding: 1rem;
+  display: inline-block;
+}
+
+.lowercase-char-row{
+  padding: 1rem;
+  display: inline-block;
+}
+
+.uppercase-char-row{
+  padding: 1rem;
+  display: inline-block;
+}
+
+.generator-body{
+  text-align: center;
+  color: #25272E;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Lora', serif;
+}
+
+.generator{
   background-color: white;
+  padding: 1rem;
+  border-radius: 4px;
+}
+
+.generator-header{
+  text-align: left;
+  font-size: 24px;
+  color: #25272E;
+}
+
+.password-area{
+  border-radius: 4px;
+  border: 2px dashed lightgrey;
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+.password{
+  color: grey;
+}
+
+.buttons{
+  position: relative;
+}
+
+.generate-button{
+  background: darkred;
+  color: white;
+  border: none;
+  border-radius: 24px;
+  padding: 1rem;
+  cursor: pointer;
+  margin-right: 25%;
+}
+
+.copy-button{
+  background: grey;
+  color: white;
+  border: none;
+  border-radius: 24px;
+  padding: 1rem;
+  cursor: pointer;
 }
